<resources>
    <string name="app_name">BrainWang\'s Blog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="send_comment">send comment</string>
    <string name="menu_it_industry">IT Industry</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_geek_views">Geek views</string>
    <string name="menu_shuoshuo">ShuoShuo</string>
    <string name="menu_usercenter">User Center</string>
    <string name="nav_header_user_name">guest</string>
    <string name="menu_home">Home Page </string>
    <string name="menu_collect">Collection</string>
    <string name="menu_history"> Browsing History</string>
    <string name="nav_header_user_email">email@wangbaiyuan.cn</string>
    <string name="leave_Message">Leave a message for Author</string>
    <string name="default_postContent">Empty Post Content!</string>
    <string name="back">Back</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">Search</string>
    <string name="search_hint">Search Post,Tag,User,ShuoShuo...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_password_require">Password (required)</string>
    <string name="prompt_confirmpassword">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Password or Email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_browser">WebPaper is Loading...</string>
    <string name="list_item_summary">Loading...</string>
    <string name="not_Implement_func">Function Not Implemented</string>
    <string name="list_title_loading">Title is loading</string>
    <string name="title_item_detail">Post Detail</string>
    <string name="err_check_network">Requst error,Please check your network!</string>
    <string name="action_register_title">No Account?Register</string>
    <string name="action_signin_title">I have an Account</string>
    <string name="title_activity_user_center">User Center</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_share">Share</string>
    <string name="ssdk_baidutieba">百度贴吧</string>
    <string name="ssdk_baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="ssdk_share_to_baidutieba">分享到百度贴吧</string>
    <string name="action_speakerRead">Read</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
